--- a/after_check_in_steps.qmd
+++ b/after_check_in_steps.qmd
@@ -1,4 +1,4 @@
-# After One-week Check-in Call Steps
+# After One-week Check-in Call Steps {#sec-after_check_in_steps}
 
 
 <center>(The purpose of this SOP is to outline which steps need to be completed after successful check-in sessions)</center>
