--- a/aurora_risk2_consent_onboarding_script.qmd
+++ b/aurora_risk2_consent_onboarding_script.qmd
@@ -1,4 +1,4 @@
-# Aurora - Risk2 Consent and Onboarding Script
+# Aurora - Risk2 Consent and Onboarding Script {#sec-aurora_onboarding_script}
 
 NEEDS UPDATING
 
