--- a/compliance_messages.qmd
+++ b/compliance_messages.qmd
@@ -1,4 +1,4 @@
-# Compliance Messages
+# Compliance Messages {#sec-compliance_messages}
 
 <center>(This SOP contains warning messages to send when conducting compliance checks.)</center>
 
