--- a/star_app_content.qmd
+++ b/star_app_content.qmd
@@ -1,5 +1,4 @@
-
-# STAR App Features and Content
+# STAR App Features and Content {#sec-star_app_content}
 
 ==List All Features and add short blurb==
 
