--- a/design_methods.qmd
+++ b/design_methods.qmd
@@ -1,4 +1,4 @@
-# Overview of Research Design and Methods
+# Overview of Research Design and Methods {#sec-design_methods}
 
 ## Study Procedure Chronology
 
