--- a/ra_tasks.qmd
+++ b/ra_tasks.qmd
@@ -44,17 +44,14 @@ When your assigned tasks are complete, you can help by performing other tasks!
 * Check Google Voice messages
 * Check STAR DMs
 * Check discussion boards
-
 * Post participant questions in their threads along with planned response
 * Add issues to payment scratchpad/WOG
-* Make sure to update participants' new number in Google Voice 
-
+* Make sure to update participants' new number in Google Voice
 * Respond to any participant messages
 
 ## Reminder messages
 * Send reminder messages
 * Check messages for answers to the reminders
-
 
 ## Recruitment
 * Zipcodes project
@@ -68,6 +65,8 @@ When your assigned tasks are complete, you can help by performing other tasks!
   * [See Slack post here](https://uw-arc.slack.com/archives/CKU3M2KNG/p1601925847073000?thread_ts=1601670391.057000&cid=CKU3M2KNG)
   * Study staff will regularly (1x a week) check the STAR discussion board to make sure that there are no posts that violate the STAR App guidelines. Posts that violate the guidelines will be removed immediately and a warning will be sent to the participant from the **"STAR Help"** live site account .
 
-
+## A Note about Slack
+* For people who haven't had much experience using slack, make sure you are not only added to **#lab-meeting**, **#project-admin**, **#zip-code admin** channel, but you are also adding those channel to the side channels so that you can receive notifications from those places! 
+  * simply find the "+ Add Channel" button on the purple side bar >> hit browse channels >> add to work space  
 
 
